# dev-env-tests

./: .gitignore  Makefile  README.md
bazel/: .gitignore  README.md  WORKSPACE
bazel/demo/: BUILD  demo.cc
bazel/lib-hello/: BUILD
bazel/lib-world/: BUILD  world.cc  world.h
bazel/pylib/: BUILD
bazel/tests/: BUILD  libtorch.bzl  test-hello.cc  test-libtorch.cc  test-world.cc  test_hello.py
cc-glog/: CMakeLists.txt  README.md  main.cc
cc-gtest/: CMakeLists.txt  README.md
cc-libtorch/: CMakeLists.txt  README.md  main.cc
cc-systemc/: CMakeLists.txt  README.md  main.cc
cmake/: CMakeLists.txt
cmake/demo/: CMakeLists.txt  demo.cc
cmake/lib-hello/: CMakeLists.txt  hello.cc
cmake/lib-world/: CMakeLists.txt
cmake/tests/: CMakeLists.txt  test_hello.cc  test_world.cc
